# musicbee

./: .gitignore  Cargo.toml  README.md  flake.nix  tauri.conf.json
capabilities/: default.json
src/: lib.rs  main.rs  style.rs
ui/: app.js  index.html  styles.css
