[package]
name = "musicbee-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "musicbee_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
