[package]
name = "musicbee-iced"
version = "0.1.0"
edition = "2021"

[lib]
name = "musicbee_iced"

[dependencies]
iced = { version = "0.14.0", default-features = false, features = [
  "wgpu",
  "tiny-skia",
  "crisp",
  "web-colors",
  "thread-pool",
  "x11",
  "image",
  "tokio"
] }
serde = { version = "1", features = ["derive"] }
